# wbroker-rs

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE.txt  Makefile  README.md
.claude/: common-patterns.md  context.md  debug-log.md  project-improvements.md  project-knowledge.md
peripheral/: Cargo.toml
peripheral/src/: bme280.rs  lib.rs  so1602a.rs
src/: config.rs  database.rs  lib.rs  main.rs  peripheral.rs  so1602a.rs
src/bme280/: mod.rs
src/helper/: mod.rs
src/peripheral/: so1602a.rs
src/so1602a/: mod.rs
utils/: wbroker-rs.service
