[package]
name = "wbroker-rs"
version = "0.3.0-dev1"
edition = "2024"

[dependencies]
peripheral = { path = "peripheral" }
chrono = "0.4.39"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"
