[package]
edition = "2024"
name = "wbroker-rs"
version = "0.3.0"

[dependencies]
chrono = { version = "0.4.41" }
clap = { version = "4.5.40", features = ["derive", "env"] }
peripheral = { path = "peripheral" }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "any",
    "sqlite",
    "postgres",
    "mysql",
    "chrono",
] }
tokio = { version = "1.45.1", features = ["full"] }
toml = { version = "0.8.23" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"
